--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -1223,6 +1223,10 @@ ul.ddp-list-text li a .ddp-data-info span {display:block; color:#4b515b; font-si
 .ddp-area-boardside .ddp-ui-down-title2 .ddp-wrap-morebutton {display:inline-block;}
 .ddp-area-boardside .ddp-ui-down-title2 .ddp-ui-buttons .ddp-wrap-datalock,.ddp-area-boardside .ddp-ui-down-title2 .ddp-ui-buttons .ddp-wrap-datarecommend,
 .ddp-area-boardside .ddp-ui-down-title2 .ddp-ui-buttons em[class*="ddp-icon-"] {vertical-align:middle; margin-left:7px;}
+
+.ddp-area-boardside .ddp-ui-down-title2 .ddp-ui-buttons .ddp-wrap-morebutton.ddp-selected .ddp-wrap-popup2,
+.ddp-area-boardside .ddp-ui-down-title2 .ddp-hover-tooltip:hover .ddp-ui-tooltip-info {z-index:15;}
+
 .ddp-area-boardside .ddp-ui-down-title2 .ddp-ui-buttons .ddp-wrap-popup2 em[class*="ddp-icon-"] {margin-left:0px;}
 .ddp-area-boardside .ddp-ui-down-title2:hover {background-color:#e7e7ea;}
 .ddp-area-boardside .ddp-ui-down-title2:hover .ddp-wrap-datalock em.ddp-icon-lock-s2 {background-color:#e7e7ea; border:1px solid #e7e7ea;}
@@ -1542,24 +1546,26 @@ ul.ddp-list-text li a .ddp-data-info span {display:block; color:#4b515b; font-si
 .ddp-filter-area .ddp-list-buttons li.ddp-selected:after {position:absolute; top:0; left:0; right:0; bottom:0; border-radius:2px; border:1px solid #90969f; content:'';}
 
 .ddp-filter-area .ddp-filter-type {padding:49px 0 0 0;}
-
 .ddp-filter-area .ddp-filter-type .ddp-label-name {display:block; padding-bottom:5px; color:#90969f; font-size:13px;}
 .ddp-filter-area .ddp-filter-type .ddp-btn-time {display:inline-block; position:relative; padding:2px 3px 2px 10px; margin-top:6px; border-radius:2px; background-color:#f6f6f7; cursor:pointer;}
 .ddp-filter-area .ddp-filter-type .ddp-btn-time .ddp-form-multy {margin-top:0px; }
 .ddp-filter-area .ddp-filter-type .ddp-btn-time .ddp-form-multy span.ddp-txt-label {color:#4c515a; font-size:12px;}
 .ddp-filter-area .ddp-filter-type .ddp-btn-time.ddp-selected {background-color:#fff;}
-
 .ddp-filter-area .ddp-filter-type .ddp-btn-time.ddp-selected .ddp-form-multy  span.ddp-txt-label:before  {display:inline-block; position:relative; margin-right:7px; width:14px; height:10px; background:url(../images/icon_select2.png) no-repeat; background-position-y:-11px; vertical-align: middle; content:'';}
 .ddp-filter-area .ddp-filter-type .ddp-btn-time.ddp-selected:before {position:absolute; top:0; left:0; right:0; bottom:0; border-radius:2px; border:1px solid #90969f; content:'';}
 .ddp-filter-area .ddp-filter-type .ddp-btn-time .ddp-form-multy .ddp-box-multy { top:0px;}
 
 .ddp-filter-form .ddp-option-type {padding:0 25px 0 25px;}
-.ddp-filter-form .ddp-option-type .ddp-option-in {padding:9px 0 6px 0; border-bottom:1px solid #e7e7ea;}
-.ddp-filter-form .ddp-option-type .ddp-option-btn {float:right;}
-.ddp-filter-form .ddp-option-type .ddp-option-search {overflow:Hidden;}
+.ddp-filter-form .ddp-option-type .ddp-option-in {position:Relative; padding:9px 92px 6px 0; border-bottom:1px solid #e7e7ea;}
+.ddp-filter-form .ddp-option-type .ddp-option-btn {position:absolute; top:10px; right:0;}
+/*.ddp-filter-form .ddp-option-type .ddp-option-search {overflow:Hidden;}*/
 .ddp-filter-form .ddp-option-type .ddp-search-value {background:none;}
 .ddp-filter-form .ddp-option-type .ddp-search-value .ddp-data-value {background:#fff;}
 .ddp-filter-form .ddp-option-type .ddp-option-in .ddp-search-value .ddp-data-value .icon-search {display:inline-block; position:absolute; top:50%; left:0px; margin-top:-8px;width:14px; height:15px; background:url(../images/icon_search.png) no-repeat; background-position:left -12px;}
+
+.ddp-filter-form .ddp-option-type .ddp-search-value .ddp-data-value .icon-warning {position:absolute; top:2px; right:0; margin:0; width:25px; height:25px; border-radius:2px; border:1px solid #cdd8f4; background:none; background-color:#f0f3fc; box-sizing:border-box; }
+.ddp-filter-form .ddp-option-type .ddp-search-value .ddp-data-value .icon-warning:before {display:inline-block; position:absolute; top:50%; left:50%; margin:-8px 0 0 -7px; width:15px; height:14px; background:url(../images/icon_info3.png) no-repeat; background-position:left -12px; content:'';}
+
 .ddp-filter-form .ddp-option {padding:25px 0 10px 0;}
 
 .ddp-filter-form .ddp-option.ddp-type .ddp-search-value .ddp-data-value {background:none;}
